--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,9 @@ body {
       rgba(250, 250, 250, 0.836)
     ),
     url("https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/a586d9116324325.605f8b343e11c.jpg"); */
-    background-image:url("https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/a586d9116324325.605f8b343e11c.jpg");
+    /* background-image:url("https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/a586d9116324325.605f8b343e11c.jpg"); */
+    /* background-image: url("../public/images/template.jpeg"); */
+    background-color: #ddd;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -29,7 +31,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(66, 66, 66, 0.2);
+  background-color: rgba(229, 23, 23, 0.325);
   border: 0px;
   background-clip: padding-box;
   border-radius: 5px;
@@ -43,7 +45,7 @@ body {
 }
 
 nav {
-  background-color: #292828;
+  background-color: #f41515;
   padding: 1rem 1rem;
   background-repeat: no-repeat;
   background-position: center;
@@ -79,7 +81,6 @@ nav {
   color: white;
 }
 #login_btn:hover {
-  background-color: rgb(243, 235, 223);
   color: rgb(8, 8, 8);
 }
 
@@ -92,14 +93,17 @@ nav {
 #cart {
   font-size: 2rem;
   font-family: calibri;
-  color: white;
+  color: rgb(59, 20, 215);
+  margin: 10px;
+  margin-bottom: 15px;
+  padding: 10px;
 }
 
 #cart_count {
   background-color: rgb(243, 235, 223);
   padding: 0.2rem 0.5rem;
   border-radius: 0.2rem;
-  color: rgb(2, 2, 2);
+  color: rgb(21, 46, 237);
   font-weight: bold;
   font-size: 0.9rem;
 }
@@ -162,11 +166,98 @@ nav {
 /* Footer */
 
 footer {
+  
   margin-top: 8rem;
-  color: grey;
+  background: linear-gradient(15deg,#a0e0b6,#e8bf82,#a569d7);
+  color: rgb(199, 33, 33);
   bottom: 0;
   width: 100%;
 }
+.socials{
+  /* background-color: #080503; */
+  display: flex;
+  font-size: 2rem;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+}
+
+.socials a{
+  margin: 5px;
+}
+
+.top {
+  margin-left: 5px;
+  margin-top: 5px;
+  width: 70%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-top: 7rem;
+  padding-bottom: 3rem;
+  border-bottom: 1px solid var(--color-grey-black);
+  & > div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    width: 25%;
+
+    .title {
+      color: var(--color-grey-black);
+      font-size: 1.7rem;
+      text-transform: uppercase;
+      font-weight: 600;
+      margin-bottom: 2rem;
+    }
+    a {
+      font-size: 1.7rem;
+      color: var(--color-dark-grey);
+    }
+  }
+}
+@media screen and (max-width: 890px) {
+  .footer{
+    .top {
+      flex-direction: column;
+      align-items: center;
+      gap: 3rem;
+
+      & > div {
+        align-items: center;
+        .title {
+          margin-bottom: 1rem;
+        }
+        a {
+          text-align: center;
+        }
+      }
+    }
+    .footer {
+      height: 200px;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
+  }
+}
+
+.icontw:hover{
+  color: black;
+}
+.iconln:hover{
+  color: blue;
+}
+.iconin:hover{
+  color: rgb(255, 0, 51);
+  background-color: whitesmoke;
+}
+.icongit:hover{
+  color: black;
+}
+
+
 
 /* Ratings */
 
@@ -923,7 +1014,7 @@ ul.CTAs a {
   outline: none;
 }
 .bac{
-  background-color: black;
+  background-color: rgb(57, 47, 47);
 }
 .bb{
   color: white;
@@ -948,6 +1039,7 @@ ul.CTAs a {
 }
 .cc{
   background-color:#7ac142;
+  background: linear-gradient(15deg,#a0e0b6,#e8bf82,#a569d7);
 }
 .hov:hover{
   color: #be521f;
@@ -958,3 +1050,13 @@ ul.CTAs a {
 .blu{
   color: blue;
 }
+
+
+
+
+
+
+
+
+
+
